--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "truffle": "^4.0.5",
+    "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.6.0"
   }
 }
