--- a/truffle.js.example
+++ b/truffle.js.example
@@ -8,6 +8,11 @@ module.exports = {
             port: 8545,
             network_id: "*", // Match any network id
         },
+        test: {
+            host: "localhost",
+            port: 8545,
+            network_id: "*" // Match any network id
+        },
         ropsten:  {
             network_id: 3,
             provider: function() {
