--- a/truffle.js.example
+++ b/truffle.js.example
@@ -1,25 +1,44 @@
-var HDWalletProvider = require("truffle-hdwallet-provider");
-var mnemonic = "{{ONE TWO THREE ... TWELVE}}"
+require('babel-register');
+require('babel-polyfill');
+
+const HDWalletProvider = require("truffle-hdwallet-provider");
+const infuraToken = process.env.INFURA_TOKEN;
+const mnemonic = process.env.MNEMONIC;
 
 module.exports = {
-    networks: {
-        development: {
-            host: "localhost",
-            port: 8545,
-            network_id: "*", // Match any network id
-        },
-        ropsten:  {
-            network_id: 3,
-            provider: function() {
-                return new HDWalletProvider(mnemonic, "https://ropsten.infura.io/{{YOUR_TOKEN}}");
-            },
-            gas:   2900000
-        }
+  // See <http://truffleframework.com/docs/advanced/configuration>
+  // to customize your Truffle configuration!
+
+  networks: {
+    development: {
+      host: "localhost",
+      port: 8545,
+      network_id: "*" // Match any network id
     },
-    solc: {
-        optimizer: {
-            enabled: true,
-            runs: 200
-        }
+    test: {
+      host: "localhost",
+      port: 8545,
+      network_id: "*" // Match any network id
+    },
+    coverage: {
+      host: 'localhost',
+      network_id: '*', // eslint-disable-line camelcase
+      port: 8555,
+      gas: 0xfffffffffff,
+      gasPrice: 0x01,
+    },
+    ropsten: {
+      network_id: 3,
+      provider: function () {
+        return new HDWalletProvider(mnemonic, `https://ropsten.infura.io/${infuraToken}`);
+      },
+      gas: 4700000
     }
+  },
+  solc: {
+    optimizer: {
+      enabled: true,
+      runs: 200
+    }
+  }
 };
