--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
   "author": "Wutthiphat Phuriphatwatthana",
   "license": "MIT",
   "dependencies": {
-    "truffle": "^4.0.5",
     "truffle-hdwallet-provider": "0.0.3",
-    "web3": "^1.0.0-beta.30",
-    "zeppelin-solidity": "^1.6.0"
+    "web3": "^1.0.0-beta2",
+    "zeppelin-solidity": "^1.7.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
@@ -35,7 +34,7 @@
     "chai-bignumber": "^2.0.2",
     "coveralls": "^3.0.0",
     "ganache-cli": "^6.1.0",
-    "solidity-coverage": "^0.4.12",
-    "truffle": "^4.0.6"
+    "solidity-coverage": "^0.4.14",
+    "truffle": "^4.1.3"
   }
 }
